[tool.poetry]
name = "websocket-chat"
version = "0.1.0"
description = ""
authors = ["Lukash <sashass20062727@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
motor = "^3.4.0"
uvicorn = {extras = ["all"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
